--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@nuxtjs/axios": "^5.11.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
-    "nuxt": "^2.13.0"
+    "colorthief": "^2.3.2",
+    "nuxt": "^2.13.0",
+    "vue-infinite-loading": "^2.4.5",
+    "vue-owl-carousel": "^2.0.3",
+    "vue-typeahead": "^2.3.2"
   },
   "devDependencies": {}
 }
